--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.20.3",
+    "@react-oauth/google": "^0.12.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.456.0",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-google-places-autocomplete": "^4.1.0",
     "react-router-dom": "^6.28.0",
     "sonner": "^1.7.0",
