--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.1",
     "lucide-react": "^0.456.0",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
