--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.0.1",
     "lucide-react": "^0.456.0",
+    "mongoose": "^8.8.1",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
