--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.20.3",
     "@react-oauth/google": "^0.12.1",
+    "@tabler/icons-react": "^3.22.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^11.0.1",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.456.0",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
